=== Content 1.2 Final ===
Release date: 15 Sept 2013
Revision: 
 
 ''' Fixed '''
* #12 edit Content > can not create a Symlink
* #246 false pagination
* #250 sometimes no function for comment
* #282 Clone of content also clones pageviews
* #409 bug with content pagination
* #434 Content Menu Block of Module "Content" generates links that wont show comment feature

=== Content 1.1 Final ===
Release date: 18 Sept 2011
Revision: 22686

'''Fixed'''
* #394 (addons): adjusted time handling to latest changes in the core (for 1.2.1) (phoenyx)
* #226: corrected default value for content_updated_date (phoenyx)
* #228: comments can be created again (phoenyx)
* #446: the default page can be specified again (phoenyx)
* #633: making umlauts work in tags (phoenyx)
* #230: content can now be deleted from frontend (phoenyx)
* #715: fixed missing template issue (phoenyx)

'''Improved'''
* #478: cleaning up the code / refactoring for ImpressCMS 1.3 (phoenyx)
* #231: no longer creating a symlink by default (phoenyx)

=== Content 1.0 Final ===
Release date: 12/12/2009
Revision: 8982

* First public release of the module